--- a/auth.html
+++ b/auth.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>OneID Login</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/mgalante/jquery.redirect/master/jquery.redirect.js"></script>
 </head>
 
@@ -13,17 +14,23 @@
     <!-- Load OneID script-->
     <script type="text/javascript" src="https://stg.cdn.registerdisney.go.com/v4/OneID.js"></script>
     <script type="text/javascript">
+        // get query params
+        var urlParams = new URLSearchParams(location.search);
+        var pingFederateHost = "https://wdc-oauth-pingfederate-engine.ping-devops.com";
+
+
+
         var did = OneID.get({
             // Put your client ID here.  Append the environment to your client id (-STAGE || -PROD)
             clientId: 'LPTEST-PING.TEST.WEB'
 
-                // site hosted using HTTPS
-                // Responder page is required.
-                , responderPage: `${window.location.href.match(/(.*)\//g)}didresponder.html`
+            // site hosted using HTTPS
+            // Responder page is required.
+            , responderPage: `${window.location.href.match(/(.*)\//g)}didresponder.html`
 
-                // CSS File to override default lightbox styles (HTTPS Only)
-                // CSS file must be on a publicly accessible https URL
-                ,
+            // CSS File to override default lightbox styles (HTTPS Only)
+            // CSS file must be on a publicly accessible https URL
+            ,
             //cssOverride: '',
             //optionalConfigs:
         });
@@ -32,7 +39,7 @@
         did.on('error', handleError)
         did.on('close', handleClose);
 
-        did.init().then(function(data) {
+        did.init().then(function (data) {
             console.log("Event: init");
             data.loggedIn ? handleLogin(data.guest) : did.launchIdentityFlow();
         });
@@ -43,23 +50,26 @@
             did.off('close');
         }
 
-        function handleLogin(d) {
+        async function handleLogin(d) {
             console.log(`Event: login`)
             clearListeners();
-            // add swid and token to params (passed in from request)
-            var params = {
-                client_id: '',
-                swid: d.token.swid,
-                access_token: d.token.access_token,
-                id_token: d.token.id_token,
-                redirect_uri: '',
-                state: '',
-                response_type: '',
-            }
-            $.redirect(`${location.pathname}/create-session`, params, "POST", "_top");
+            //  get REF from PING
+            var credentials = btoa('tompoc1:FederateM0re');
+            const requestOptions = {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json', 'Authorization': `Basic ${credentials}`},
+                body: JSON.stringify({ subject: d.token.swid })
+            };
+
+            var ref = await fetch(`https://${pingFederateHost}/ext/ref/dropoff`, requestOptions)
+                .then(response => response.json())
+
+            // redirect back to PING
+            var redirectURL = `https://${pingFederateHost}${urlParams.get('resumePath')}?REF=${ref.REF}`;
+            window.location.href = redirectURL;
         }
 
-        function handleError(err) {
+        async function handleError(err) {
             console.log("Event: error");
             console.log("Error:" + JSON.stringify(err, null, 4));
             clearListeners();
@@ -72,7 +82,7 @@
             $.redirect(`${location.pathname}/create-session`, params, "POST", "_top");
         }
 
-        function handleClose() {
+        async function handleClose() {
             console.log("Event: close");
             clearListeners();
             var params = {
