--- a/auth.html
+++ b/auth.html
@@ -61,11 +61,11 @@
                 body: JSON.stringify({ subject: d.token.swid })
             };
 
-            var ref = await fetch(`https://${pingFederateHost}/ext/ref/dropoff`, requestOptions)
+            var ref = await fetch(`${pingFederateHost}/ext/ref/dropoff`, requestOptions)
                 .then(response => response.json())
 
             // redirect back to PING
-            var redirectURL = `https://${pingFederateHost}${urlParams.get('resumePath')}?REF=${ref.REF}`;
+            var redirectURL = `${pingFederateHost}${urlParams.get('resumePath')}?REF=${ref.REF}`;
             window.location.href = redirectURL;
         }
 
