--- a/auth.html
+++ b/auth.html
@@ -54,7 +54,7 @@
             console.log(`Event: login`)
             clearListeners();
             //  get REF from PING
-            var credentials = btoa('tompoc1:FederateM0re');
+            var credentials = btoa('tompoc1:2FederateM0re');
             const requestOptions = {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json', 'Authorization': `Basic ${credentials}`},
