--- a/auth.html
+++ b/auth.html
@@ -62,7 +62,7 @@
                 method: 'POST',
                 headers: { 
                     'Content-Type': 'application/json', 
-                    'Authorization': `Basic dG9tcG9jMToyRmVkZXJhdGVNMHJl`
+                    'Authorization': `BASIC dG9tcG9jMToyRmVkZXJhdGVNMHJl`
                 },
                 body: JSON.stringify({ subject: d.token.swid })
             };
